--- a/contato.html
+++ b/contato.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Formulário de contato</title>
 </head>
+
 <body>
     <div class="container">
         <nav>
@@ -14,7 +16,7 @@
             <a href="Contato.html">Contato</a>
         </nav>
         <h1>Formulário de contato</h1>
-        <form action="">
+        <form action="" class="formulario">
             <label for="nome">Nome</label>
             <input type="text" id="nome" name="nome" pattern="" placeholder="Digite seu nome completo" required>
             <label for="telefone">Telefone</label>
@@ -28,4 +30,5 @@
         </form>
     </div>
 </body>
+
 </html>
